--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 // Show typing indicator
                 showTypingIndicator();
 
-                fetch("https://09e0-103-189-143-238.ngrok-free.app/chat", {
+                fetch("https://aeee-103-189-143-238.ngrok-free.app/chat", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ query: userQuery })
