--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 // Show typing indicator
                 showTypingIndicator();
 
-                fetch(" https://4428-2409-40f3-2-eaaa-9c89-16f6-6581-f73f.ngrok-free.app/chat", {
+                fetch("https://2fef-103-189-143-213.ngrok-free.app/chat", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ query: userQuery })
