--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 // Show typing indicator
                 showTypingIndicator();
 
-                fetch("https://2fef-103-189-143-213.ngrok-free.app/chat", {
+                fetch("https://c0af-103-189-143-227.ngrok-free.app/chat", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ query: userQuery })
