--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 // Show typing indicator
                 showTypingIndicator();
 
-                fetch("https://c0af-103-189-143-227.ngrok-free.app/chat", {
+                fetch(" https://99ba-2409-40f3-109a-2db1-d483-90d4-af15-35be.ngrok-free.app/chat", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
                     body: JSON.stringify({ query: userQuery })
